fixed issues with text color & sprite sizing (idk, old one worked on firefox)

--- a/src/components/PokemonViewer.css
+++ b/src/components/PokemonViewer.css
@@ -16,8 +16,6 @@
         display: flex;
         flex-direction: column;
         gap: 1.5vh;
-
-        height: fit-content;
     }
 
     .placeholder-stat-col {
@@ -50,6 +48,7 @@
     padding-bottom: 6pt;
     margin: 0;
 
+    color: white;
     font-size: 1.35rem;
     font-weight: bold;
 
