--- a/src/components/SpriteDisplay.css
+++ b/src/components/SpriteDisplay.css
@@ -3,16 +3,12 @@
     background-color: white;
     border-radius: 10pt;
 
+    height: 50vh;
 }
 
 .sprite-display > img, .noimg {
     height: 100%;
-
-    max-height: 100%;
-    max-width: 100%;
     
-    image-rendering: crisp-edges;
-
     filter: drop-shadow(10px 10px 10px darkgrey);
 
 }
